add concurrent test cases in 04-13.md
TODO 连接池、注册中心、注解形式引入、粘包问题、连接池

--- a/测试文档/rpc-netty/v1.0.0测试文档/04-13.md
+++ b/测试文档/rpc-netty/v1.0.0测试文档/04-13.md
@@ -57,10 +57,11 @@ testResponseTime中直接new NettyClient ()直接请求sayHello()
 
 5.1 测试结果报告
 
-|方法名称| testResponseTimeWithoutResponse | testResponseTimeWithResponse |
-|--- |---------------------------------|------------------------------| 
-|期望时间 | 0-0.5s                          | 0-0.5s                       |
-|实际时间 | 6.4s                            | 6.3s                         |
+| 方法名称        | testResponseTimeWithoutResponse | testResponseTimeWithResponse | testQPSWithoutRealPool |
+|-------------|---------------------------------|--------------------|------------------------|
+| 期望时间 (s)    | 0-0.5                           | 0-0.5              | 1-2s                   |
+| 实际时间 (s)    | 0.17                            | 0.24               | 出现死锁，仅出现一次打印           |
+| qps (req/s) | 6-7                             | 5                  |                        |
 
 
 5.2 记录和文档
@@ -68,6 +69,7 @@ testResponseTime中直接new NettyClient ()直接请求sayHello()
 5.2.1 测试用例
 - com.netty.rpc.NettyServerTest.testResponseTimeWithoutResponse()
 - com.netty.rpc.NettyServerTest.testResponseTimeWithResponse()
+- com.netty.rpc.NettyServerTest.testQPSWithoutRealPool()
 
 5.2.2 记录文档
 
@@ -75,4 +77,4 @@ testResponseTime中直接new NettyClient ()直接请求sayHello()
 
 5.3 问题和建议
 
-性能很差，准备采用预先连接建立线程池
+
