1.add concurrent test cases in 04-13.md 2.add question which details why fail to getProxy with debug status in the dev.md
TODO Connection pool、Registry center、Annotation-based injection、Sticky packet problem

--- a/测试文档/rpc-netty/v1.0.0测试文档/04-13.md
+++ b/测试文档/rpc-netty/v1.0.0测试文档/04-13.md
@@ -44,24 +44,27 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 3.2 测试进度
 
 || finish     | start |
-|----|------------| ---- |
-|timeline | 2023-04-13 | 2023-04-13 |
+|----|------------|------------|
+|timeline | 2023-0 2023-04-14 04-14 |
 
 4. 测试用例设计
 
 4.1 测试用例
 
-testResponseTime中直接new NettyClient ()直接请求sayHello()
+- com.netty.rpc.NettyServerTest.testResponseTimeWithoutResponse() 单次请求无响应数据的接口
+- com.netty.rpc.NettyServerTest.testResponseTimeWithResponse()   单次请求包含响应数据的接口
+- com.netty.rpc.NettyServerTest.testQPSWithoutRealPool() 并发调用无响应数据的接口，测试QPS
 
 5. 报告和记录
 
 5.1 测试结果报告
 
 | 方法名称        | testResponseTimeWithoutResponse | testResponseTimeWithResponse | testQPSWithoutRealPool |
-|-------------|---------------------------------|--------------------|------------------------|
-| 期望时间 (s)    | 0-0.5                           | 0-0.5              | 1-2s                   |
-| 实际时间 (s)    | 0.17                            | 0.24               | 出现死锁，仅出现一次打印           |
-| qps (req/s) | 6-7                             | 5                  |                        |
+|-------------|---------------------------------|------------------------------|------------------------|
+| 期望时间 (s)    | 0-0.5                           | 0-0.5                        | 0-1                    |
+| 实际时间 (s)    | 0.17                            | 0.24                         | 0.3                    |
+| qps (req/s) | -                               | -                            | 157                    |
+
 
 
 5.2 记录和文档
