modify requirement doc and test doc

--- a/docs/测试文档/rpc-netty/v1.0.2/04-15.md
+++ b/docs/测试文档/rpc-netty/v1.0.2/04-15.md
@@ -4,32 +4,33 @@
 
 |项目名称| 版本号   |
 |---|-------|
-|项目名称| 1.0.1 |
+|项目名称| 1.0.2 |
 
 
 1.2 文档信息
 
-|文档名称| 文档版本  | 作者  |日期|
-|---|-------|-----|---|
-|测试文档| 1.0.1 | 邱依良 |2023-04-13|
+|文档名称| 文档版本  | 作者  | 日期         |
+|---|-------|-----|------------|
+|测试文档| 1.0.2 | 邱依良 | 2023-04-15 |
 
 
 2. 概述
 
 2.1 测试目的
 
-主要检查当前用伪连接池的情况下
+主要检查当前用连接池的情况下
 - 所有请求预期时间 小于 1s
 - 所有的接口返回正确结果
+- QPS提升50%以上
 
 2.2 测试范围
 
 - sayHello 无返回
-- selectAll 返回List集合
 
 2.3 测试环境
 
 Windows 10 、Maven3.X、JUnit
+
 
 3. 测试计划
 
@@ -42,9 +43,9 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 
 3.2 测试进度
 
-|          | start     | finish     |
-|----------|-----------|------------|
-| timeline | 2023-04-13 | 2023-04-13 |
+|          | start      | finish     |
+|----------|------------|------------|
+| timeline | 2023-04-14 | 2023-04-15 |
 
 4. 测试用例设计
 
@@ -52,17 +53,17 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 
 - com.netty.rpc.NettyServerTest.testResponseTimeWithoutResponse() 单次请求无响应数据的接口
 - com.netty.rpc.NettyServerTest.testResponseTimeWithResponse()   单次请求包含响应数据的接口
-- com.netty.rpc.NettyServerTest.testQPSWithoutRealPool() 并发调用无响应数据的接口，测试QPS
-
+- com.netty.rpc.NettyServerTest.testQPSWithRealPool() 并发调用无响应数据的接口，测试QPS
+- 
 5. 报告和记录
 
 5.1 测试结果报告
 
-| 方法名称        | testResponseTimeWithoutResponse | testResponseTimeWithResponse | testQPSWithoutRealPool |
-|-------------|---------------------------------|------------------------------|------------------------|
-| 期望时间 (s)    | 0-0.5                           | 0-0.5                        | 0-1                    |
-| 实际时间 (s)    | 0.17                            | 0.24                         | 0.3                    |
-| qps (req/s) | -                               | -                            | 157                    |
+| 方法名称        | testResponseTimeWithoutResponse | testResponseTimeWithResponse | testQPSWithRealPool |
+|-------------|---------------------------------|------------------------------|---------------------|
+| 期望时间 (s)    | 0-0.5                           | 0-0.5                        | 0-1                 |
+| 实际时间 (s)    | 0.17                            | 0.24                         | 0.2                 |
+| qps (req/s) | -                               | -                            | 230                 |
 
 
 
@@ -71,11 +72,11 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 5.2.1 测试用例
 - com.netty.rpc.NettyServerTest.testResponseTimeWithoutResponse()
 - com.netty.rpc.NettyServerTest.testResponseTimeWithResponse()
-- com.netty.rpc.NettyServerTest.testQPSWithoutRealPool()
+- com.netty.rpc.NettyServerTest.testQPSWithRealPool()
 
 5.2.2 记录文档
 
-测试文档/rpc-netty/v1.0.1测试文档/04-13.md
+测试文档/rpc-netty/v1.0.2测试文档/04-15.md
 
 5.3 问题和建议
 
