modify test document 04-15.md

--- a/docs/测试文档/rpc-netty/v1.0.2/04-15.md
+++ b/docs/测试文档/rpc-netty/v1.0.2/04-15.md
@@ -22,6 +22,7 @@
 - 所有请求预期时间 小于 1s
 - 所有的接口返回正确结果
 - QPS提升50%以上
+- 50000条请求压测，查看稳定性
 
 2.2 测试范围
 
@@ -61,9 +62,9 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 
 | 方法名称        | testResponseTimeWithoutResponse | testResponseTimeWithResponse | testQPSWithRealPool |
 |-------------|---------------------------------|------------------------------|---------------------|
-| 期望时间 (s)    | 0-0.5                           | 0-0.5                        | 0-1                 |
-| 实际时间 (s)    | 0.17                            | 0.24                         | 0.2                 |
-| qps (req/s) | -                               | -                            | 230                 |
+| 期望时间 (s)    | 0-0.5                           | 0-0.5                        | 60-180              |
+| 实际时间 (s)    | 0.13                            | 0.14                         | 173                 |
+| qps (req/s) | -                               | -                            | 2892                |
 
 
 
