modify tests doc for new test cases

--- a/docs/测试文档/rpc-netty/v1.0.2/04-15.md
+++ b/docs/测试文档/rpc-netty/v1.0.2/04-15.md
@@ -52,28 +52,35 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 
 4.1 测试用例
 
-- com.netty.rpc.NettyServerTest.testResponseTimeWithoutResponse() 单次请求无响应数据的接口
-- com.netty.rpc.NettyServerTest.testResponseTimeWithResponse()   单次请求包含响应数据的接口
 - com.netty.rpc.NettyServerTest.testQPSWithRealPool() 并发调用无响应数据的接口，测试QPS
-- 
+- com.netty.rpc.NettyServerTest.testCallCorrectServiceVersion() 调用两个版本，查看是否正确
+
+
 5. 报告和记录
 
 5.1 测试结果报告
 
-| 方法名称        | testResponseTimeWithoutResponse | testResponseTimeWithResponse | testQPSWithRealPool |
-|-------------|---------------------------------|------------------------------|---------------------|
-| 期望时间 (s)    | 0-0.5                           | 0-0.5                        | 60-180              |
-| 实际时间 (s)    | 0.13                            | 0.14                         | 173                 |
-| qps (req/s) | -                               | -                            | 2892                |
+| 方法名称        |  testQPSWithRealPool |
+|-------------|-------------------|
+| 期望时间 (s)    | 60-180             |
+| 实际时间 (s)    | 173                |
+| qps (req/s)       | 2892                |
+
+| 方法名称        | testQPSWithRealPool |
+|-------------|---------------------|
+| 期望结果        | 返回正确的版本号            |
+| 实际结果        | 返回争取的版本号            |
+
+
 
 
 
 5.2 记录和文档
 
 5.2.1 测试用例
-- com.netty.rpc.NettyServerTest.testResponseTimeWithoutResponse()
-- com.netty.rpc.NettyServerTest.testResponseTimeWithResponse()
-- com.netty.rpc.NettyServerTest.testQPSWithRealPool()
+
+- com.netty.rpc.NettyServerTest.testQPSWithRealPool() 
+- com.netty.rpc.NettyServerTest.testCallCorrectServiceVersion() 
 
 5.2.2 记录文档
 
@@ -81,4 +88,5 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 
 5.3 问题和建议
 
-QPS较差，需要进一步提升
+- 自动注入，通过@Autowired注入
+- 
