modify doc for new requirements

--- a/docs/测试文档/rpc-netty/v1.0.2/04-15.md
+++ b/docs/测试文档/rpc-netty/v1.0.2/04-15.md
@@ -69,7 +69,7 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 | 方法名称        | testQPSWithRealPool |
 |-------------|---------------------|
 | 期望结果        | 返回正确的版本号            |
-| 实际结果        | 返回争取的版本号            |
+| 实际结果        | 返回正确的版本号            |
 
 
 
