--- a/docs/需求文档/rpc-netty/v1.0.1/04-17需求文档.md
+++ b/docs/需求文档/rpc-netty/v1.0.1/04-17需求文档.md
@@ -4,7 +4,7 @@
 
 描述
 
-系统处理请求时，每个请求都会阻塞直到返回，仍旧处于NIO，降低系统性能。因此，应该引入线程池，以优化处理请求的线程。
+系统处理请求时，每个请求都会阻塞channel返回，仍旧处于NIO，降低系统性能。因此，应该引入线程池，以优化处理请求的线程。
 
 
 要求
