[doc] modify the structure for docs and add more requirements in require doc

--- a/docs/测试文档/rpc-netty/v1.0.2/04-15.md
+++ b/docs/测试文档/rpc-netty/v1.0.2/04-15.md
@@ -18,11 +18,13 @@
 
 2.1 测试目的
 
-主要检查当前用连接池的情况下
+主要在新增了连接池、异步回调的情况下的吞吐量：
 - 所有请求预期时间 小于 1s
 - 所有的接口返回正确结果
-- QPS提升50%以上
+- QPS提升100%以上
 - 50000条请求压测，查看稳定性
+
+其次检查增加了注解之后，版本号能否被正确注册。
 
 2.2 测试范围
 
@@ -37,7 +39,6 @@ Windows 10 、Maven3.X、JUnit
 
 3.1 测试任务
 
-3.1.1 动rpc-netty-example中的Server
 
 3.1.2 编写NettyServerTest类中的testResponseTimeWithoutResponse、testResponseTimeWithResponse方法，通过新建Client请求Server
 sayHello和selectAll检验可用性、结果正确性、响应性
@@ -46,7 +47,7 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 
 |          | start      | finish     |
 |----------|------------|------------|
-| timeline | 2023-04-14 | 2023-04-15 |
+| timeline | 2023-04-14 | 2023-04-20 |
 
 4. 测试用例设计
 
@@ -60,11 +61,11 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 
 5.1 测试结果报告
 
-| 方法名称        |  testQPSWithRealPool |
-|-------------|-------------------|
+| 方法名称        | testQPSWithRealPool |
+|-------------|--------------------|
 | 期望时间 (s)    | 60-180             |
-| 实际时间 (s)    | 173                |
-| qps (req/s)       | 2892                |
+| 实际时间 (s)    | 5                  |
+| qps (req/s)       | 8406               |
 
 | 方法名称        | testQPSWithRealPool |
 |-------------|---------------------|
