--- a/docs/需求文档/v1.0.2/04-17需求文档.md
+++ b/docs/需求文档/v1.0.2/04-17需求文档.md
@@ -9,7 +9,6 @@
 
 要求
 
-
 引入线程池来处理请求
 
 要求能够使用线程池进行异步回调
@@ -24,10 +23,10 @@
 
 要求
 
-
 引入高效的序列化器（如 Google Protobuf 或 Apache Thrift）
 
-能够满足 3. 压缩算法需求
+
+3. 压缩算法需求
 
 
 描述
@@ -36,7 +35,6 @@
 
 
 要求
-
 
 引入高效的压缩算法（如 LZ4）
 
@@ -52,7 +50,6 @@
 
 要求
 
-
 引入缓存层来减少序列化和反序列化次数
 
 能够满足系统的性能需求
@@ -67,10 +64,29 @@
 
 要求
 
-
 引入 HeapBytebuf 或 DirectBytebuf 等高性能的 buffer
 
 能够满足系统的性能需求
 
+6. 服务版本号
 
-以上就是将所列出的优化改进需求转化为需求文档.md 的过程。需要注意的是，需求文档.md 应该具备清晰、准确、易懂等特点，方便其他人了解和理解。
+描述
+
+在 rpc-netty中，Service注册时候需要考虑版本号
+
+要求
+
+以注解形式引入版本号
+
+满足易用性、可扩展性
+
+7. 服务扫描
+
+在 rpc-netty中，服务自动扫描注册
+
+要求
+
+对所有需要注册的服务进行自动化扫描，如spring 启动之前一般，进行组件的扫描注册。
+
+满足易用性、便于管理
+
