[doc] add tests for Lz4

--- a/docs/测试文档/rpc-netty/v1.0.2/04-15.md
+++ b/docs/测试文档/rpc-netty/v1.0.2/04-15.md
@@ -53,19 +53,42 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 
 4.1 测试用例
 
-- com.netty.rpc.NettyServerTest.testQPSWithRealPool() 并发调用无响应数据的接口，测试QPS
+- com.netty.rpc.NettyServerTest.testQPSForNoResponseWithRealPool() 并发调用无响应数据的接口，测试QPS
+- com.netty.rpc.NettyServerTest.testQPSForResponseWithRealPool() 并发调用响应数据的接口，测试QPS
 - com.netty.rpc.NettyServerTest.testCallCorrectServiceVersion() 调用两个版本，查看是否正确
-
 
 5. 报告和记录
 
 5.1 测试结果报告
 
-| 方法名称        | testQPSWithRealPool |
-|-------------|--------------------|
-| 期望时间 (s)    | 60-180             |
-| 实际时间 (s)    | 5                  |
-| qps (req/s)       | 8406               |
+- 没有响应数据的情况下能达到9000 QPS
+
+| 方法名称        | testQPSForNoResponseWithRealPool |
+|-------------|----------------------------------|
+| 期望时间 (s)    | 10-20                            |
+| 实际时间 (s)    | 10                               |
+| qps (req/s)       | 9000                             |
+
+
+- 有响应数据的情况下达到8000 QPS ， 在使用了高效的LZ4压缩算法后，进一步提升了1000+QPS
+
+无LZ4压缩 
+
+| 方法名称        | testQPSForResponseWithRealPool |
+|-------------|--------------------------------|
+| 期望时间 (s)    | 10-20                          |
+| 实际时间 (s)    | 14                             |
+| qps (req/s)       | 6902                           |
+
+有LZ4压缩
+
+| 方法名称        | testQPSForResponseWithRealPool |
+|-------------|--------------------------------|
+| 期望时间 (s)    | 10-20                          |
+| 实际时间 (s)    | 12                             |
+| qps (req/s)       | 7947                           |
+
+- 允许注解进行Service注入
 
 | 方法名称        | testQPSWithRealPool |
 |-------------|---------------------|
@@ -74,13 +97,12 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 
 
 
-
-
 5.2 记录和文档
 
 5.2.1 测试用例
 
-- com.netty.rpc.NettyServerTest.testQPSWithRealPool() 
+- com.netty.rpc.NettyServerTest.testQPSForNoResponseWithRealPool()
+- com.netty.rpc.NettyServerTest.testQPSForResponseWithRealPool() 
 - com.netty.rpc.NettyServerTest.testCallCorrectServiceVersion() 
 
 5.2.2 记录文档
@@ -89,5 +111,3 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 
 5.3 问题和建议
 
-- 自动注入，通过@Autowired注入
-- 
