[doc] add new requirements for thread isolation

--- a/docs/需求文档/rpc-netty/v1.0.2/04-17需求文档.md
+++ b/docs/需求文档/rpc-netty/v1.0.2/04-17需求文档.md
@@ -4,8 +4,12 @@
 
 描述
 
-系统处理请求时，每个请求都会阻塞channel返回，仍旧处于NIO，降低系统性能。因此，应该引入线程池，以优化处理请求的线程。
+- 系统处理请求时，每个请求都会阻塞channel返回，仍旧处于NIO，降低系统性能。因此，应该引入线程池，以优化处理请求的线程。
 
+- 线程池隔离: RPC 服务是基础服务，可能会有非常多的调用方，例如用户接口、订单接口等等。在我们实现的 RPC 框架中，
+业务线程池是共用的，所有的 RPC 请求都会有该线程池处理。如果有一天其中一个服务调用方的流量激增，导致线程池资源耗尽，
+那么其他服务调用方都会受到严重的影响。我们可以尝试将不同的服务调用方划分到不同等级的业务线程池中，通过分组的方式对服务调用方的流量进行隔离，
+从而避免其中一个调用方出现异常状态导致其他所有调用方都不可用，提高服务整体性能和可用率。
 
 要求
 
