--- a/docs/需求文档/rpc-netty/v2.0.0/05-01需求文档.md
+++ b/docs/需求文档/rpc-netty/v2.0.0/05-01需求文档.md
@@ -5,6 +5,7 @@
 背景
 
 随着系统规模的扩大，服务的数量和复杂度也越来越高，单纯的RPC方法调用已经无法满足对服务的管理需求，例如服务的注册、发现、负载均衡、监控、熔断、限流、重试等。
+没有注册中心，则每个服务都需要知道其他所有服务的地址和状态，这将导致服务之间的耦合性增加，服务扩展和维护也变得非常困难。
 
 
 需求
@@ -14,13 +15,6 @@
 
 解决方案
 
-
 服务注册与发现：服务端和客户端需要实现注册和发现服务的功能，可以使用 Zookeeper、Consul 等服务注册中心来进行管理，当服务启动或停止时，相应的服务将在注册中心上进行注册和注销，客户端通过服务注册中心获得服务端地址进行调用。
 
 负载均衡：负责分发请求到多个服务实例中的负载均衡器是治理中非常重要的一环，常用的还是基于权重、故障检测API的负载均衡算法。
-
-熔断：对于因服务依赖或流量过高等问题而导致的异常，可以使用熔断器来防止故障扩散，例如采用 Hystrix 等框架实现熔断。
-
-限流：通过限定请求的数量或速率，以防止服务因过多请求而崩溃或变慢，可以使用 RateLimiter 等框架实现限流。
-
-监控：对于治理中的各个节点，例如服务注册中心、负载均衡器、熔断器、限流器等节点，都需要进行监控，可以使用 Prometheus 等框架实。
