[doc] modify some requirements

--- a/docs/需求文档/rpc-netty/v2.0.0/05-01需求文档.md
+++ b/docs/需求文档/rpc-netty/v2.0.0/05-01需求文档.md
@@ -15,6 +15,6 @@
 
 解决方案
 
-服务注册与发现：服务端和客户端需要实现注册和发现服务的功能，可以使用 Zookeeper、Consul 等服务注册中心来进行管理，当服务启动或停止时，相应的服务将在注册中心上进行注册和注销，客户端通过服务注册中心获得服务端地址进行调用。
+服务注册与发现：服务端和客户端需要实现注册和发现服务的功能，可以使用 Zookeeper 等服务注册中心来进行管理，当服务启动或停止时，相应的服务将在注册中心上进行注册和注销，客户端通过服务注册中心获得服务端地址进行调用。
 
 负载均衡：负责分发请求到多个服务实例中的负载均衡器是治理中非常重要的一环，常用的还是基于权重、故障检测API的负载均衡算法。
