[doc] remove redundant content

--- a/docs/测试文档/rpc-netty/v2.0.0/05-06.md
+++ b/docs/测试文档/rpc-netty/v2.0.0/05-06.md
@@ -24,13 +24,7 @@
 - QPS提升100%以上
 - 50000条请求压测，查看稳定性
 
-其次检查增加了注解之后，版本号能否被正确注册。
-
-2.2 测试范围
-
-- sayHello 无返回
-
-2.3 测试环境
+2.2 测试环境
 
 Windows 10(8核 32G)、Maven3.X、JUnit
 
@@ -40,7 +34,7 @@ Windows 10(8核 32G)、Maven3.X、JUnit
 3.1 测试任务
 
 
-3.1.2 编写NettyServerTest类中的testResponseTimeWithoutResponse、testResponseTimeWithResponse方法，通过新建Client请求Server
+3.1.2 对NettyServerTest类中的testResponseTimeWithoutResponse、testResponseTimeWithResponse方法，通过新建Client请求Server
 sayHello和selectAll检验可用性、结果正确性、响应性
 
 3.2 测试进度
@@ -67,8 +61,7 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 | 方法名称        | testResponseTimeWithoutResponse | testResponseTimeWithResponse | 
 |-------------|---------------------------------|------------------------------|
 | 期望时间 (s)    | 0-0.5                           | 0-0.5                        |
-| 实际时间 (s)    | 0.12                            | 0.12                         | 
-| qps (req/s) | -                               | -                            | 
+| 实际时间 (s)    | 0.001                           | 0.001                        | 
 
 
 - 没有响应数据的情况下能达到 11150 QPS
@@ -93,7 +86,6 @@ sayHello和selectAll检验可用性、结果正确性、响应性
 |-------------|---------------------|
 | 期望结果        | 返回正确的版本号            |
 | 实际结果        | 返回正确的版本号            |
-
 
 
 5.2 记录和文档
